--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "start": "node server.js"
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+       "express": "^4.18.2",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
   },
   "eslintConfig": {
     "extends": [
